# FEM_2D_NS_Stabilized

./: CMakeLists.txt  LICENSE.txt  Makefile  README.md  initial.plt  makefile  mesh_channel.txt  mesh_channel_with_backward_step.txt  mesh_channel_with_backward_step_refined.txt  mesh_channel_with_cavity.txt  mesh_channel_with_cavity_refined.txt  solution.plt  solution_Re5000_mesh5.plt  solution_channel_with_pillar_Re20.plt  untitled.geo~  untitled.msh  untitled1.geo
include/: Basis.h  Element.h  GaussQuad.h  Mesh.h  Node.h
sample_solutions/: solution_backward_step_Re150_refined.plt  solution_channel_Re10.plt  solution_channel_with_pillar_refined_Re50.plt  solution_lid_driven_cavity_Re2000.plt  solution_lid_driven_cavity_Re400.plt
src/: Basis.cpp  Element.cpp  Mesh.cpp  Node.cpp  main.cpp
